--- a/css/tooplate-style.css
+++ b/css/tooplate-style.css
@@ -45,14 +45,15 @@ body {
   background-image: url(../img/section1_bg.jpg) ;
   background-size: cover;
   /*  -webkit-clip-path: polygon(0px 0px, 100% 0px, 100% 84%, 0px 100%);
-  clip-path: polygon(0px 0px, 100% 0px, 100% 84%, 0px 100%);
-  background-position: center -95px; */
+  clip-path: polygon(0px 0px, 100% 0px, 100% 84%, 0px 100%);*/
+  background-position: center -95px;
  padding-top: 30px;
 }
 
 .tm-section-3 {
   height: 790px;
-  background: url(../img/share.jpg) fixed center center;
+  background: url(../img/share.png) ;
+  background-position: center -95px;
 
   background-size: cover;
 /* -webkit-clip-path: polygon(0px 0px, 100% 14%, 100% 86%, 0px 100%);
@@ -263,7 +264,7 @@ a.btn:hover {
   .tm-section-3 {
     padding-top: 100px;
     padding-bottom: 100px;
-  
+
   }
 
   .tm-circle-img-container {
