--- a/css/tooplate-style.css
+++ b/css/tooplate-style.css
@@ -26,7 +26,7 @@ body {
 
 .tm-container {
   background-color: white;
-  max-width: 1400px;
+  
 }
 
 .tm-site-title {
@@ -241,9 +241,20 @@ a.btn:hover {
     margin-left: 30px;
     margin-right: 30px;
   }
+  .gifclass{
+    width: 40vw;
+    margin: auto 0;
+    margin-right: 0;
+
+  }
 }
 
 @media (max-width: 576px) {
+  .gifclass{
+    width: 90vw;
+    margin: auto ;
+
+  }
   .tm-bg-circle-white {
     border-radius: 50px;
     width: 100%;
